[workspace]
members = ["boids","neutonian", "turret_combat"]
resolver = "2"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for binary size
strip = true  # Automatically strip symbols from the binary.

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
incremental = true

[profile.ci]
inherits = "dev"
opt-level = 0
incremental = false


# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
